add favicon to compact

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>test html</title>
     <link rel="stylesheet" href="css/index.css"/>
+    <link rel="shortcut icon" href="img/okunishinishi.png"/>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </head>
