--- a/test/browser/html/test-jquery.treeview.html
+++ b/test/browser/html/test-jquery.treeview.html
@@ -36,11 +36,14 @@
                         new Item('海'),
                         new Item('陸').children([
                             new Item('山'),
+                            new Item('川'),
                             new Item('平地')
                         ]),
                         new Item('空')
                     ]),
-                    new Item('月')
+                    new Item('月'),
+                    new Item('火星').children([]),
+                    new Item('水星').children([])
                 ]);
             });
         })(jQuery);
