--- a/test/browser/html/test-jquery.flowchart.html
+++ b/test/browser/html/test-jquery.flowchart.html
@@ -18,6 +18,9 @@
             width: 960px;
             margin: 0 auto;
         }
+        .fc-item{
+            opacity: 0.2;
+        }
     </style>
     <script>
         global = window;
