--- a/test/browser/html/test-tek.view.html
+++ b/test/browser/html/test-tek.view.html
@@ -46,6 +46,7 @@
     <h1>form</h1>
     <form action="" name="some-form">
         <input type="text" name="text01" value="text-value01"/>
+        <input type="text" name="text02" value="text-value02" data-role="editable-text"/>
         <input type="checkbox" name="checkbox01" value="checkbox-value01" checked/>
         <input type="checkbox" name="checkbox01" value="checkbox-value02"/>
         <input type="checkbox" name="checkbox01" value="checkbox-value03" checked/>
