--- a/test/html-tests/html/test-style-clean.html
+++ b/test/html-tests/html/test-style-clean.html
@@ -72,6 +72,12 @@
             <i class="icon icon-pencil float-right block-list-item-control"></i>
         </li>
     </ul>
+    <div id="tabs">
+        <a class="tab" href="javascript:void(0)">tab0</a>
+        <a class="tab" href="javascript:void(0)">tab1</a>
+        <a class="tab tab-selected" href="javascript:void(0)">tab2</a>
+        <a class="tab tab-disabled" href="javascript:void(0)">tab3</a>
+    </div>
 </article>
 </body>
 </html>
