--- a/test/html-tests/html/test-style-clean.html
+++ b/test/html-tests/html/test-style-clean.html
@@ -52,7 +52,7 @@
     <br>
 
     <form class="block-list-header">
-        <input type="search"/>
+        <input type="search" results/>
     </form>
     <ul class="block-list">
         <li>
