--- a/meta/tmpl/jquery-plugin/test/html-tests/html/test-jquery.__plugin-name__.html
+++ b/meta/tmpl/jquery-plugin/test/html-tests/html/test-jquery.__plugin-name__.html
@@ -27,13 +27,18 @@
     <script>
         exports = $;
     </script>
+    <script src="../../../lib/src/javascripts/jquery.__plugin-name__.js/01.$.js"></script>
 
     <script>
         exports = $.fn;
     </script>
 
-    <script src="../javascripts/qunit-1.12.0.js"></script>
+    <script src="../../../lib/src/javascripts/jquery.__plugin-name__.js/02.$.fn.js"></script>
 
+    <script>
+        exports = undefined;
+    </script>
+    <script src="../javascripts/qunit-1.12.0.js"></script>
     <script src="../javascripts/test-jquery.__plugin-name__.js"></script>
 </head>
 <body>
