--- a/test/html-tests/html/test-jquery.spreadsheet.html
+++ b/test/html-tests/html/test-jquery.spreadsheet.html
@@ -27,13 +27,18 @@
     <script>
         exports = $;
     </script>
+    <script src="../../../lib/src/javascripts/jquery.spreadsheet.js/01.$.js"></script>
 
     <script>
         exports = $.fn;
     </script>
 
-    <script src="../javascripts/qunit-1.12.0.js"></script>
+    <script src="../../../lib/src/javascripts/jquery.spreadsheet.js/02.$.fn.js"></script>
 
+    <script>
+        exports = undefined;
+    </script>
+    <script src="../javascripts/qunit-1.12.0.js"></script>
     <script src="../javascripts/test-jquery.spreadsheet.js"></script>
 </head>
 <body>
