--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>tek-view</title>
     <link rel="stylesheet" href="../stylesheets/qunit-1.12.0.css"/>
+    <link rel="stylesheet" href="../stylesheets/test-tek.view.css"/>
     <style>
         section {
             padding: 50px;
