--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -71,6 +71,8 @@
         </select>
         <textarea name="textarea01" cols="30" rows="10">text-content</textarea>
         <a href="javascript:void(0)" data-role="submit-btn"></a>
+
+        <input type="text" name="text-03" value="" data-role="selectable-text"/>
     </form>
 </section>
 </body>
