--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -43,6 +43,10 @@
     <script src="../javascripts/test-tek.view.js"></script>
 </head>
 <body>
+<section id="section00">
+    <div id="spy-for"></div>
+    <div id="spy">spy</div>
+</section>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 
