--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -57,6 +57,8 @@
     <form action="" name="some-form">
         <input type="text" name="text01" value="text-value01"/>
         <input type="text" name="text02" value="text-value02" data-role="editable-text"/>
+        <input type="text" name="text03" value=""/>
+        <input type="text" name="text04" value="0"/>
         <input type="checkbox" name="checkbox01" value="checkbox-value01" checked/>
         <input type="checkbox" name="checkbox01" value="checkbox-value02"/>
         <input type="checkbox" name="checkbox01" value="checkbox-value03" checked/>
@@ -77,6 +79,8 @@
         <a href="javascript:void(0)" data-role="submit-btn"></a>
 
         <input type="text" name="text-03" value="" data-role="selectable-text"/>
+
+        <input type="submit" value="a"/>
     </form>
 </section>
 </body>
