add auto format

--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -75,6 +75,11 @@
             <option value="select-value13" selected>v03</option>
             <option value="select-value14">v04</option>
         </select>
+        <input type="text" data-autoformat="hiragana"/>
+        <input type="text" data-autoformat="katakana"/>
+        <input type="text" data-autoformat="hankaku"/>
+        <input type="text" data-autoformat="zenkaku"/>
+        <input type="number" data-autoformat="hankaku"/>
         <textarea name="textarea01" cols="30" rows="10">text-content</textarea>
         <a href="javascript:void(0)" data-role="submit-btn"></a>
 
