--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -88,5 +88,26 @@
         <input type="submit" value="a"/>
     </form>
 </section>
+<section id="section02">
+    <form>
+        <input type="search" results id="word-search-input"/>
+    </form>
+    <table id="search-table">
+        <thead>
+        <tr>
+            <th></th>
+            <th>head01</th>
+            <th>head02</th>
+            <th>head03</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr><th>h01</th><td>data01</td><td>data02</td></tr>
+        <tr><th>h02</th><td>data11</td><td>data12</td></tr>
+        <tr><th>h03</th><td>data21</td><td>data22</td></tr>
+        <tr><th>h04</th><td>data31</td><td>data32</td></tr>
+        </tbody>
+    </table>
+</section>
 </body>
 </html>
