--- a/test/html-tests/html/test-tek-mixin.html
+++ b/test/html-tests/html/test-tek-mixin.html
@@ -11,6 +11,24 @@
     <link rel="stylesheet" href="../stylesheets/test-tek-mixin.css"/>
 </head>
 <body>
+<section>
+    <form action="">
+        <div>
+            <input type="checkbox" id="checkbox-01-val1" name="checkbox-01"/>
+            <label for="checkbox-01-val1">val1</label>
+            <input type="checkbox" id="checkbox-01-val2" name="checkbox-01" checked/>
+            <label for="checkbox-01-val2">val2</label>
+            <input type="checkbox" id="checkbox-01-val3" name="checkbox-01"/>
+            <label for="checkbox-01-val3">val3</label>
+        </div>
+        <div>
+            <input type="radio" id="radio-01-true" name="radio-01" checked/>
+            <label for="radio-01-true">true</label>
+            <input type="radio" id="radio-01-false" name="radio-01"/>
+            <label for="radio-01-false">true</label>
+        </div>
+    </form>
+</section>
 <section style="width:320px">
     <table class="block-table">
         <thead>
