add file upload

--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -43,14 +43,19 @@
     <script src="../javascripts/test-tek.view.js"></script>
 </head>
 <body>
+
+
+
 <section id="section00">
+    <form id="upload-form" action="">
+
+    </form>
     <div id="spy-for"></div>
     <div id="spy">spy</div>
 </section>
+
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
-
-
 <section id="section01">
     <h1>form</h1>
 
