--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -47,9 +47,7 @@
 
 
 <section id="section00">
-    <form id="upload-form" action="">
-
-    </form>
+    <div id="drop-upload-input"></div>
     <div id="spy-for"></div>
     <div id="spy">spy</div>
 </section>
