--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -45,8 +45,18 @@
 <body>
 
 
-
 <section id="section00">
+
+    <fieldset id="transferable-fieldset-0">
+        <legend>transferable01</legend>
+        <span class="transferable-item">I'm draggable !</span>
+    </fieldset>
+    <fieldset id="transferable-fieldset-1">
+        <legend>transferable02</legend>
+        <span class="transferable-item">I'm draggable !</span>
+    </fieldset>
+
+
     <div id="drop-upload-input"></div>
     <div id="spy-for"></div>
     <div id="spy">spy</div>
@@ -105,10 +115,26 @@
         </tr>
         </thead>
         <tbody>
-        <tr><th>h01</th><td>data01</td><td>data02</td></tr>
-        <tr><th>h02</th><td>data11</td><td>data12</td></tr>
-        <tr><th>h03</th><td>data21</td><td>data22</td></tr>
-        <tr><th>h04</th><td>data31</td><td>data32</td></tr>
+        <tr>
+            <th>h01</th>
+            <td>data01</td>
+            <td>data02</td>
+        </tr>
+        <tr>
+            <th>h02</th>
+            <td>data11</td>
+            <td>data12</td>
+        </tr>
+        <tr>
+            <th>h03</th>
+            <td>data21</td>
+            <td>data22</td>
+        </tr>
+        <tr>
+            <th>h04</th>
+            <td>data31</td>
+            <td>data32</td>
+        </tr>
         </tbody>
     </table>
 </section>
