--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -47,6 +47,14 @@
 
 <section id="section00">
 
+
+    <nav id="slide-nav">
+        <a class="nav-item0" href="javascript:void(0)">nav0</a>
+        <a class="nav-item1" href="javascript:void(0)">nav1</a>
+        <a class="nav-item2" href="javascript:void(0)">nav2</a>
+        <a class="nav-item3" href="javascript:void(0)">nav3</a>
+    </nav>
+
     <fieldset id="transferable-fieldset-0">
         <legend>transferable01</legend>
         <span class="transferable-item">I'm draggable !</span>
