add custom sort

--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -127,6 +127,7 @@
             <th>h01</th>
             <td>data01</td>
             <td>data02</td>
+            <td>data03</td>
         </tr>
         <tr>
             <th>h02</th>
