--- a/test/html-tests/html/test-tek-style-flat.html
+++ b/test/html-tests/html/test-tek-style-flat.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>tek-style-flat.html</title>
+    <link rel="shortcut icon" href="../../../dist/images/tek.png"/>
     <link rel="stylesheet" href="../stylesheets/test-tek-style-flat.css"/>
 </head>
 <body>
