--- a/test/html-tests/html/test-tek-style-flat.html
+++ b/test/html-tests/html/test-tek-style-flat.html
@@ -77,7 +77,7 @@
             <li class="hoverable">
                 <a href="#" class="cover">
                 </a>
-                    <span>editable list item with link</span>
+                <span>editable list item with link</span>
                 <span class="stick-right stick-top hoverable-child">
                     <a class="edit-btn" href="#"></a>
                     <a class="destroy-btn" href="#"></a>
@@ -140,6 +140,17 @@
             content01
         </div>
         <div id="tab-content1" class="tab-content"></div>
+    </section>
+
+    <section class="positioned" style="width:100%;height: 400px;">
+        <div class="dialog">
+            <div class="dialog-inner">
+                <a class="close-btn stick-right stick-top" href=""></a>
+                <br class="clear"/>
+                Are you sure?
+                <a class="wide-btn btn" href="#">yes, i am</a>
+            </div>
+        </div>
     </section>
 </article>
 <footer>
