--- a/test/html-tests/html/test-tek-style-flat.html
+++ b/test/html-tests/html/test-tek-style-flat.html
@@ -40,6 +40,11 @@
         <a class="mypage-btn" href="#">mypage</a>
         <a class="star-btn" href="#">star</a>
         <a class="admin-btn" href="#">admin</a>
+        <a class="img-btn" href="#">img</a>
+        <a class="view-btn" href="#">view</a>
+        <a class="undo-btn" href="#">undo</a>
+        <a class="redo-btn" href="#">redo</a>
+        <a class="anchor-btn" href="#">anchor</a>
     </section>
 
     <section>
