--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -147,6 +147,9 @@
         </tbody>
     </table>
 </section>
+<section>
+    <a id="dropdown-btn" href="javascript:void(0)">dropdown btn</a>
+</section>
 
 </body>
 </html>
