add remember form

--- a/test/html-tests/html/test-tek.view.html
+++ b/test/html-tests/html/test-tek.view.html
@@ -151,5 +151,14 @@
     <a id="dropdown-btn" href="javascript:void(0)">dropdown btn</a>
 </section>
 
+<section>
+    <form id="rememberable-form" action="">
+        <h1>remember me</h1>
+        <input type="text" name="remember-01"/>
+        <input type="text" name="remember-02"/>
+        <input type="submit"/>
+    </form>
+</section>
+
 </body>
 </html>
